fix for bug #386303: Duplicate indexes in nsFaviconService and nsAnnotationService

patch=Marco Bonardo <mak77@supereva.it>

r=sspitzer